on/off pushed and tested

--- a/LampProject/app/templates/components/lamp-display.hbs
+++ b/LampProject/app/templates/components/lamp-display.hbs
@@ -2,14 +2,19 @@
 	<div class="col-xs-12">
 		<h4>Metawear Device Connection</h4>
 		{{#unless metawearConnected}}
-			<button type="button" class="btn" {{action 'connect'}}>Start</button>
+			<button type="button" class="btn" {{action 'connect'}}>Connect</button>
 		{{else}}
-			<button type="button" class="btn red" {{action 'disconnect'}}>Stop</button>
+			<button type="button" class="btn red" {{action 'disconnect'}}>Disconnect</button>
 		{{/unless}}
 	</div>
 </div>
 
-
 {{#if metawearConnected}}
+	<div class="col-xs-12">
+		<h4>Metawear Accelerometer Controls</h4>
+		<button type="button" class="btn red btn-sm" {{action 'accelON'}}>Turn on Accelerometer </button><br>
+		<button type="button" class="btn red btn-sm" {{action 'accelOFF'}}>Turn off Accelerometer </button>
+	</div>
 	{{time-series-chart lineData=MWaccelHistory}}
+
 {{/if}}
