added a history of on's and off's

--- a/LampProject/app/templates/components/lamp-display.hbs
+++ b/LampProject/app/templates/components/lamp-display.hbs
@@ -16,5 +16,6 @@
 		<button type="button" class="btn red btn-sm" {{action 'accelOFF'}}>Turn off Accelerometer </button>
 	</div>
 	{{time-series-chart lineData=MWaccelHistory}}
+	{{time-series-chart lineData=activeData}}
 
 {{/if}}
